# Automated-Talent-langgraph

./: README.md  app.py  cli.py  demo.py  langgraph.json  main.py  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
src/agent/: examples.py  graph.py  nodes.py  prompts.py  state.py  test.ipynb
